...
        : await patientApi.addPatientAllergyV1(patientID, allergyData);

    if (result.ok) {
      await refreshAllergyData();
      setIsModalVisible(false);

      alertTitle = modalMode === 'edit' ? 'Successfully updated allergy' : 'Successfully added allergy';
    } else {
      const errors = result.data?.detail || result.data?.message || 'Unknown error';

      result.data
        ? (alertDetails = `\n${errors}\n\nPlease try again.`)
        : (alertDetails = 'Please try again.');
...

  // Ask user to confirm deletion of allergy
  const handleDeleteAllergy = (allergyID) => {
    const tempData = allergyData.filter((x) => x.allergyID == allergyID)[0];

    Alert.alert(
      'Are you sure you wish to delete this item?',
      `Date: ${formatDateTime(new Date(tempData.createdDate), true)}\n` +
        `Time: ${formatDateTime(new Date(tempData.createdDate), false)}\n` +
        `Allergic To: ${tempData.allergyListDesc}\n` +
        `Reaction: ${tempData.allergyReaction}\n` +
        `Notes: ${tempData.allergyRemarks}\n`,
      [
        {
          text: 'Cancel',
          onPress: () => {},
          style: 'cancel',
        },
        { text: 'OK', onPress: () => deleteAllergy(allergyID) },
      ],
    );
  };

  // Delete allergy
  const deleteAllergy = async (allergyID) => {
...

    const result = await patientApi.deletePatientAllergyV1(patientID, allergyID);
    if (result.ok) {
      await refreshAllergyData();
      setIsModalVisible(false);

      alertTitle = 'Successfully deleted allergy';
    } else {
      const errors = result.data?.detail || result.data?.message || 'Unknown error';

      result.data
        ? (alertDetails = `\n${errors}\n\nPlease try again.`)
        : (alertDetails = 'Please try again.');
...
          style={{ flex: 1 }}
          ListEmptyComponent={() =>
            noDataMessage(
              statusCode,
              isLoading,
              isError,
              'No allergies found',
              true,
            )
          }
          data={allergyData}
          keyboardShouldPersistTaps="handled"
          keyExtractor={(item) => item.allergyID}
...
